--- a/styles/main.css
+++ b/styles/main.css
@@ -26,30 +26,50 @@
 /* Media Queries */
 
 @media (min-width: 375px) {
+  .main-content {
+    margin: 60px auto;
+  }
+
   .text {
     width: 50%;
   }
 
   .text h2 {
     font-size: 1.2rem;
+    padding: 0 0 20px 0;
+    margin-left: 20px;
   }
 
   .text p {
     font-size: 0.6rem;
+    padding: 0 0 20px 0;
+    margin-left: 20px;
+  }
+
+  .main-content img {
+    width: 55%;
   }
 }
 
 @media (min-width: 475px) {
+  .main-content {
+    margin: 60px auto;
+  }
+
   .text {
     width: 50%;
   }
 
   .text h2 {
     font-size: 1.2rem;
+    padding: 0 0 20px 0;
+    margin-left: 20px;
   }
 
   .text p {
     font-size: 0.6rem;
+    padding: 0 0 20px 0;
+    margin-left: 20px;
   }
 }
 
@@ -60,10 +80,14 @@
 
   .text h2 {
     font-size: 1.5rem;
+    padding: 0 0 20px 0;
+    margin-left: 40px;
   }
 
   .text p {
     font-size: 0.7rem;
+    padding: 0 0 20px 0;
+    margin-left: 40px;
   }
 }
 
